--- a/lang/Arabic (عربي).ini
+++ b/lang/Arabic (عربي).ini
@@ -2,6 +2,7 @@
 ; Module
 module_name = "مجموعات الوصول إلى الأمان"
 module_description = "إنشاء وإدارة مجموعات الوصول إلى الأمان ، والتي تحدد على مستوى النظام مجموعة حقوق المستخدم المسموح بها التي يمكن منحها لمستخدم REDCap في المشروع"
+doc_path = "docs/readme/README_AR.html"
 
 ; General
 ok = "نعم"
