--- a/lang/Bangla (বাংলা).ini
+++ b/lang/Bangla (বাংলা).ini
@@ -2,6 +2,7 @@
 ; Module
 module_name = "নিরাপত্তা অ্যাক্সেস গ্রুপ"
 module_description = "সিকিউরিটি অ্যাকসেস গ্রুপগুলি তৈরি এবং পরিচালনা করুন, যা সিস্টেম স্তরে একটি প্রকল্পে একটি REDCap ব্যবহারকারী অনুমোদিত ব্যবহারকারীর অধিকারের সেটকে সংজ্ঞায়িত করে"
+doc_path = "docs/readme/README_BN.html"
 
 ; General
 ok = "ঠিক আছে"
