--- a/lang/French (Français).ini
+++ b/lang/French (Français).ini
@@ -2,6 +2,7 @@
 ; Module
 module_name = "Groupes d'Accès à la Sécurité"
 module_description = "Créer et gérer des groupes d'accès de sécurité, qui définissent au niveau du système l'ensemble des droits qu'un utilisateur de REDCap peut se voir accorder dans un projet"
+doc_path = "docs/readme/README_FR.html"
 
 ; General
 ok = "OK"
