--- a/lang/German (Deutsch).ini
+++ b/lang/German (Deutsch).ini
@@ -2,6 +2,7 @@
 ; Module
 module_name = "Sicherheitszugriffsgruppen"
 module_description = "Erstellen und Verwalten von Sicherheitszugriffsgruppen, die auf Systemebene die Menge der zulässigen Benutzerrechte definieren, die einem REDCap-Benutzer in einem Projekt gewährt werden können"
+doc_path = "docs/readme/README_DE.html"
 
 ; General
 ok = "OK"
