--- a/lang/Hindi (हिंदी).ini
+++ b/lang/Hindi (हिंदी).ini
@@ -2,6 +2,7 @@
 ; Module
 module_name = "सुरक्षा पहुँच समूह"
 module_description = "सुरक्षा पहुंच समूह बनाएं और प्रबंधित करें, जो सिस्टम स्तर पर स्वीकार्य उपयोगकर्ता अधिकारों के सेट को परिभाषित करते हैं जो एक REDCap उपयोगकर्ता को एक परियोजना में दिए जाने में सक्षम है"
+doc_path = "docs/readme/README_HI.html"
 
 ; General
 ok = "ठीक"
