--- a/lang/Italian (Italiana).ini
+++ b/lang/Italian (Italiana).ini
@@ -2,6 +2,7 @@
 ; Module
 module_name = "Gruppi di Accesso alla Sicurezza"
 module_description = "Creare e gestire i Gruppi di accesso di sicurezza, che definiscono a livello di sistema la serie di diritti utente consentiti che un utente REDCap può ottenere in un progetto"
+doc_path = "docs/readme/README_IT.html"
 
 ; General
 ok = "OK"
