--- a/lang/Portuguese (Português).ini
+++ b/lang/Portuguese (Português).ini
@@ -2,6 +2,7 @@
 ; Module
 module_name = "Grupos de acesso de segurança"
 module_description = "Crie e gerencie grupos de acesso de segurança, que definem no nível do sistema o conjunto de direitos de usuário permitidos que um usuário do REDCap pode receber em um projeto"
+doc_path = "docs/readme/README_PT.html"
 
 ; General
 ok = "OK"
