--- a/lang/Spanish (Español).ini
+++ b/lang/Spanish (Español).ini
@@ -2,6 +2,7 @@
 ; Module
 module_name = "Grupos de Acceso de Seguridad"
 module_description = "Crear y gestionar grupos de acceso de seguridad, que definen a nivel del sistema el conjunto de derechos de usuario permitidos que se pueden conceder a un usuario de REDCap en un proyecto"
+doc_path = "docs/readme/README_ES.html"
 
 ; General
 ok = "OK"
