--- a/lang/Ukrainian (українська).ini
+++ b/lang/Ukrainian (українська).ini
@@ -2,6 +2,7 @@
 ; Module
 module_name = "Групи Доступу до Безпеки"
 module_description = "Створення та управління групами доступу до безпеки, які визначають на системному рівні набір допустимих прав користувачів, які можуть бути надані користувачеві REDCap в проекті"
+doc_path = "docs/readme/README_UK.html"
 
 ; General
 ok = "ГАРАЗД"
