--- a/lang/Urdu (اردو).ini
+++ b/lang/Urdu (اردو).ini
@@ -2,6 +2,7 @@
 ; Module
 module_name = "سیکیورٹی رسائی گروپس"
 module_description = "سیکیورٹی ایکسیس گروپس بنائیں اور ان کا نظم کریں، جو سسٹم کی سطح پر قابل اجازت صارف حقوق کے سیٹ کی وضاحت کرتے ہیں جو ایک پروجیکٹ میں REDCap صارف کو دیے جا سکتے ہیں۔"
+doc_path = "docs/readme/README_UR.html"
 
 ; General
 ok = "ٹھیک ہے"
