--- a/lang/Chinese (中文).ini
+++ b/lang/Chinese (中文).ini
@@ -2,6 +2,7 @@
 ; Module
 module_name = "安全访问组"
 module_description = "创建和管理安全访问组，在系统级别定义 REDCap 用户在项目中可被授予的用户权限集"
+doc_path = "docs/readme/README_ZH.html"
 
 ; General
 ok = "好的"
