--- a/lang/English.ini
+++ b/lang/English.ini
@@ -2,6 +2,7 @@
 ; Module
 module_name = "Security Access Groups"
 module_description = "Create and manage Security Access Groups, which define at the system level the set of allowable user rights a REDCap user is able to be granted in a project"
+doc_path = "README.html"
 
 ; General
 ok = "OK"
