--- a/lang/Chinese (中文).ini
+++ b/lang/Chinese (中文).ini
@@ -215,6 +215,8 @@ dt_status_paginate_next = "下一页"
 dt_status_paginate_last = "最后"
 dt_status_aria_sort_ascending = "：激活以升序排列列"
 dt_status_aria_sort_descending = "：激活以降序排列列"
+dt_status_decimal = "."
+dt_status_thousands = ","
 
 
 ; ---------------------- ;
@@ -324,6 +326,8 @@ dt_alerts_paginate_next = "下一页"
 dt_alerts_paginate_last = "最后"
 dt_alerts_aria_sort_ascending = "：激活以升序排列列"
 dt_alerts_aria_sort_descending = "：激活以降序排列列"
+dt_alerts_decimal = "."
+dt_alerts_thousands = ","
 
 
 ; --------------------- ;
@@ -377,6 +381,8 @@ dt_cc_users_paginate_next = "下一页"
 dt_cc_users_paginate_last = "最后"
 dt_cc_users_aria_sort_ascending = "：激活以升序排列列"
 dt_cc_users_aria_sort_descending = "：激活以降序排列列"
+dt_cc_users_decimal = "."
+dt_cc_users_thousands = ","
 
 
 ; -------------------- ;
@@ -510,6 +516,8 @@ dt_cc_reports_paginate_next = "下一页"
 dt_cc_reports_paginate_last = "最后"
 dt_cc_reports_aria_sort_ascending = "：激活以升序排列列"
 dt_cc_reports_aria_sort_descending = "：激活以降序排列列"
+dt_cc_reports_decimal = "."
+dt_cc_reports_thousands = ","
 
 
 ; --------------------- ;
