--- a/lang/French (Français).ini
+++ b/lang/French (Français).ini
@@ -215,6 +215,8 @@ dt_status_paginate_next = "Suivant"
 dt_status_paginate_last = "Dernier"
 dt_status_aria_sort_ascending = "pour trier les colonnes par ordre croissant : activez pour trier les colonnes par ordre croissant"
 dt_status_aria_sort_descending = "pour trier les colonnes en ordre décroissant : activez pour trier les colonnes en ordre décroissant"
+dt_status_decimal = ","
+dt_status_thousands = " "
 
 
 ; ---------------------- ;
@@ -324,6 +326,8 @@ dt_alerts_paginate_next = "Suivant"
 dt_alerts_paginate_last = "Dernière"
 dt_alerts_aria_sort_ascending = "pour trier les colonnes par ordre croissant : activez pour trier les colonnes par ordre croissant"
 dt_alerts_aria_sort_descending = "pour trier les colonnes en ordre décroissant : activez pour trier les colonnes en ordre décroissant"
+dt_alerts_decimal = ","
+dt_alerts_thousands = " "
 
 
 ; --------------------- ;
@@ -377,6 +381,8 @@ dt_cc_users_paginate_next = "Suivant"
 dt_cc_users_paginate_last = "Dernier"
 dt_cc_users_aria_sort_ascending = "pour trier les colonnes par ordre croissant : activez pour trier les colonnes par ordre croissant"
 dt_cc_users_aria_sort_descending = "pour trier les colonnes en ordre décroissant : activez pour trier les colonnes en ordre décroissant"
+dt_cc_users_decimal = ","
+dt_cc_users_thousands = " "
 
 
 ; -------------------- ;
@@ -488,10 +494,10 @@ cc_reports_40 = "Titres des projets"
 cc_reports_41 = "Projet accordant des droits non conformes à cet utilisateur"
 cc_reports_42 = "Utilisateurs et projets ayant des droits non conformes"
 
+
 ; -------------------------------- ;
 ; DataTables System Report strings ;
 ; -------------------------------- ;
-
 
 dt_cc_reports_search_placeholder = "Rechercher..."
 dt_cc_reports_info_filtered = "filtré à partir de {0} entrées totales"
@@ -510,6 +516,8 @@ dt_cc_reports_paginate_next = "Suivant"
 dt_cc_reports_paginate_last = "Dernier"
 dt_cc_reports_aria_sort_ascending = "pour trier les colonnes par ordre croissant : activez pour trier les colonnes par ordre croissant"
 dt_cc_reports_aria_sort_descending = "pour trier les colonnes en ordre décroissant : activez pour trier les colonnes en ordre décroissant"
+dt_cc_reports_decimal = ","
+dt_cc_reports_thousands = " "
 
 
 ; --------------------- ;
