--- a/lang/Spanish (Español).ini
+++ b/lang/Spanish (Español).ini
@@ -215,6 +215,8 @@ dt_status_paginate_next = "Siguiente"
 dt_status_paginate_last = "Última"
 dt_status_aria_sort_ascending = ": activar para ordenar la columna de forma ascendente"
 dt_status_aria_sort_descending = ": activar para ordenar la columna de forma descendente"
+dt_status_decimal = "."
+dt_status_thousands = ","
 
 
 ; ---------------------- ;
@@ -324,6 +326,8 @@ dt_alerts_paginate_next = "Siguiente"
 dt_alerts_paginate_last = "Última"
 dt_alerts_aria_sort_ascending = ": activar para ordenar la columna de forma ascendente"
 dt_alerts_aria_sort_descending = ": activar para ordenar la columna de forma descendente"
+dt_alerts_decimal = "."
+dt_alerts_thousands = ","
 
 
 ; --------------------- ;
@@ -377,6 +381,8 @@ dt_cc_users_paginate_next = "Siguiente"
 dt_cc_users_paginate_last = "Última"
 dt_cc_users_aria_sort_ascending = ": activar para ordenar la columna de forma ascendente"
 dt_cc_users_aria_sort_descending = ": activar para ordenar la columna de forma descendente"
+dt_cc_users_decimal = "."
+dt_cc_users_thousands = ","
 
 
 ; -------------------- ;
@@ -511,6 +517,8 @@ dt_cc_reports_paginate_next = "Siguiente"
 dt_cc_reports_paginate_last = "Última"
 dt_cc_reports_aria_sort_ascending = ": activar para ordenar la columna de forma ascendente"
 dt_cc_reports_aria_sort_descending = ": activar para ordenar la columna de forma descendente"
+dt_cc_reports_decimal = "."
+dt_cc_reports_thousands = ","
 
 
 ; --------------------- ;
