--- a/lang/Arabic (عربي).ini
+++ b/lang/Arabic (عربي).ini
@@ -215,6 +215,8 @@ dt_status_paginate_next = "التالي"
 dt_status_paginate_last = "آخر"
 dt_status_aria_sort_ascending = ": تفعيل لفرز العمود تصاعديا"
 dt_status_aria_sort_descending = ": تفعيل لفرز العمود تنازلياً"
+dt_status_decimal = "٫"
+dt_status_thousands = "٬"
 
 
 ; ---------------------- ;
@@ -324,6 +326,8 @@ dt_alerts_paginate_next = "التالي"
 dt_alerts_paginate_last = "آخر"
 dt_alerts_aria_sort_ascending = ": تفعيل لفرز العمود تصاعديا"
 dt_alerts_aria_sort_descending = ": تفعيل لفرز العمود تنازلياً"
+dt_alerts_decimal = "٫"
+dt_alerts_thousands = "٬"
 
 
 ; --------------------- ;
@@ -377,6 +381,8 @@ dt_cc_users_paginate_next = "التالي"
 dt_cc_users_paginate_last = "آخر"
 dt_cc_users_aria_sort_ascending = ": تفعيل لفرز العمود تصاعديا"
 dt_cc_users_aria_sort_descending = ": تفعيل لفرز العمود تنازلياً"
+dt_cc_users_decimal = "٫"
+dt_cc_users_thousands = "٬"
 
 
 ; -------------------- ;
@@ -510,6 +516,8 @@ dt_cc_reports_paginate_next = "التالي"
 dt_cc_reports_paginate_last = "آخر"
 dt_cc_reports_aria_sort_ascending = ": تفعيل لفرز العمود تصاعديا"
 dt_cc_reports_aria_sort_descending = ": تفعيل لفرز العمود تنازلياً"
+dt_cc_reports_decimal = "٫"
+dt_cc_reports_thousands = "٬"
 
 
 ; --------------------- ;
