--- a/lang/Bangla (বাংলা).ini
+++ b/lang/Bangla (বাংলা).ini
@@ -215,6 +215,8 @@ dt_status_paginate_next = "পরবর্তী"
 dt_status_paginate_last = "শেষ"
 dt_status_aria_sort_ascending = ": কলাম আরোহী সাজাতে সক্রিয় করুন"
 dt_status_aria_sort_descending = ": কলাম সাজানোর জন্য সক্রিয় করুন"
+dt_status_decimal = "."
+dt_status_thousands = ","
 
 
 ; ---------------------- ;
@@ -324,6 +326,8 @@ dt_alerts_paginate_next = "পরবর্তী"
 dt_alerts_paginate_last = "শেষ"
 dt_alerts_aria_sort_ascending = ": কলাম আরোহী সাজাতে সক্রিয় করুন"
 dt_alerts_aria_sort_descending = ": কলাম সাজানোর জন্য সক্রিয় করুন"
+dt_alerts_decimal = "."
+dt_alerts_thousands = ","
 
 
 ; --------------------- ;
@@ -377,6 +381,8 @@ dt_cc_users_paginate_next = "পরবর্তী"
 dt_cc_users_paginate_last = "শেষ"
 dt_cc_users_aria_sort_ascending = ": কলাম আরোহী সাজাতে সক্রিয় করুন"
 dt_cc_users_aria_sort_descending = ": কলাম সাজানোর জন্য সক্রিয় করুন"
+dt_cc_users_decimal = "."
+dt_cc_users_thousands = ","
 
 
 ; -------------------- ;
@@ -510,6 +516,8 @@ dt_cc_reports_paginate_next = "পরবর্তী"
 dt_cc_reports_paginate_last = "শেষ"
 dt_cc_reports_aria_sort_ascending = ": কলাম আরোহী সাজাতে সক্রিয় করুন"
 dt_cc_reports_aria_sort_descending = ": কলাম সাজানোর জন্য সক্রিয় করুন"
+dt_cc_reports_decimal = "."
+dt_cc_reports_thousands = ","
 
 
 ; --------------------- ;
