--- a/lang/English.ini
+++ b/lang/English.ini
@@ -215,6 +215,8 @@ dt_status_paginate_next = "Next"
 dt_status_paginate_last = "Last"
 dt_status_aria_sort_ascending = ": activate to sort column ascending"
 dt_status_aria_sort_descending = ": activate to sort column descending"
+dt_status_decimal = "."
+dt_status_thousands = ","
 
 
 ; ---------------------- ;
@@ -324,6 +326,8 @@ dt_alerts_paginate_next = "Next"
 dt_alerts_paginate_last = "Last"
 dt_alerts_aria_sort_ascending = ": activate to sort column ascending"
 dt_alerts_aria_sort_descending = ": activate to sort column descending"
+dt_alerts_decimal = "."
+dt_alerts_thousands = ","
 
 
 ; --------------------- ;
@@ -377,6 +381,8 @@ dt_cc_users_paginate_next = "Next"
 dt_cc_users_paginate_last = "Last"
 dt_cc_users_aria_sort_ascending = ": activate to sort column ascending"
 dt_cc_users_aria_sort_descending = ": activate to sort column descending"
+dt_cc_users_decimal = "."
+dt_cc_users_thousands = ","
 
 
 ; -------------------- ;
@@ -510,6 +516,8 @@ dt_cc_reports_paginate_next = "Next"
 dt_cc_reports_paginate_last = "Last"
 dt_cc_reports_aria_sort_ascending = ": activate to sort column ascending"
 dt_cc_reports_aria_sort_descending = ": activate to sort column descending"
+dt_cc_reports_decimal = "."
+dt_cc_reports_thousands = ","
 
 
 ; --------------------- ;
