--- a/lang/Hindi (हिंदी).ini
+++ b/lang/Hindi (हिंदी).ini
@@ -215,6 +215,8 @@ dt_status_paginate_next = "अगला"
 dt_status_paginate_last = "अंतिम"
 dt_status_aria_sort_ascending = ": कॉलम को आरोही क्रम में क्रमबद्ध करने के लिए सक्रिय करें"
 dt_status_aria_sort_descending = ": कॉलम को अवरोही क्रम में क्रमबद्ध करने के लिए सक्रिय करें"
+dt_status_decimal = "."
+dt_status_thousands = ","
 
 
 ; ---------------------- ;
@@ -324,6 +326,8 @@ dt_alerts_paginate_next = "अगला"
 dt_alerts_paginate_last = "अंतिम"
 dt_alerts_aria_sort_ascending = ": कॉलम को आरोही क्रम में क्रमबद्ध करने के लिए सक्रिय करें"
 dt_alerts_aria_sort_descending = ": कॉलम को अवरोही क्रम में क्रमबद्ध करने के लिए सक्रिय करें"
+dt_alerts_decimal = "."
+dt_alerts_thousands = ","
 
 
 ; --------------------- ;
@@ -377,6 +381,8 @@ dt_cc_users_paginate_next = "अगला"
 dt_cc_users_paginate_last = "अंतिम"
 dt_cc_users_aria_sort_ascending = ": कॉलम को आरोही क्रम में क्रमबद्ध करने के लिए सक्रिय करें"
 dt_cc_users_aria_sort_descending = ": कॉलम को अवरोही क्रम में क्रमबद्ध करने के लिए सक्रिय करें"
+dt_cc_users_decimal = "."
+dt_cc_users_thousands = ","
 
 
 ; -------------------- ;
@@ -510,6 +516,8 @@ dt_cc_reports_paginate_next = "अगला"
 dt_cc_reports_paginate_last = "अंतिम"
 dt_cc_reports_aria_sort_ascending = ": कॉलम को आरोही क्रम में क्रमबद्ध करने के लिए सक्रिय करें"
 dt_cc_reports_aria_sort_descending = ": कॉलम को अवरोही क्रम में क्रमबद्ध करने के लिए सक्रिय करें"
+dt_cc_reports_decimal = "."
+dt_cc_reports_thousands = ","
 
 
 ; --------------------- ;
