--- a/lang/Italian (Italiana).ini
+++ b/lang/Italian (Italiana).ini
@@ -215,6 +215,8 @@ dt_status_paginate_next = "Avanti"
 dt_status_paginate_last = "Ultimo"
 dt_status_aria_sort_ascending = ": attivare l'ordinamento della colonna in senso ascendente"
 dt_status_aria_sort_descending = ": attivare per ordinare la colonna in modo decrescente"
+dt_status_decimal = ","
+dt_status_thousands = " "
 
 
 ; ---------------------- ;
@@ -324,6 +326,8 @@ dt_alerts_paginate_next = "Avanti"
 dt_alerts_paginate_last = "Ultimo"
 dt_alerts_aria_sort_ascending = ": attivare l'ordinamento della colonna in senso ascendente"
 dt_alerts_aria_sort_descending = ": attivare per ordinare la colonna in modo decrescente"
+dt_alerts_decimal = ","
+dt_alerts_thousands = " "
 
 
 ; --------------------- ;
@@ -377,6 +381,8 @@ dt_cc_users_paginate_next = "Avanti"
 dt_cc_users_paginate_last = "Ultimo"
 dt_cc_users_aria_sort_ascending = ": attivare l'ordinamento della colonna in senso ascendente"
 dt_cc_users_aria_sort_descending = ": attivare per ordinare la colonna in modo decrescente"
+dt_cc_users_decimal = ","
+dt_cc_users_thousands = " "
 
 
 ; -------------------- ;
@@ -510,6 +516,8 @@ dt_cc_reports_paginate_next = "Avanti"
 dt_cc_reports_paginate_last = "Ultimo"
 dt_cc_reports_aria_sort_ascending = ": attivare l'ordinamento della colonna in senso ascendente"
 dt_cc_reports_aria_sort_descending = ": attivare per ordinare la colonna in modo decrescente"
+dt_cc_reports_decimal = ","
+dt_cc_reports_thousands = " "
 
 
 ; --------------------- ;
