--- a/lang/Ukrainian (українська).ini
+++ b/lang/Ukrainian (українська).ini
@@ -215,6 +215,8 @@ dt_status_paginate_next = "Далі"
 dt_status_paginate_last = "Останній"
 dt_status_aria_sort_ascending = ": активувати для сортування стовпців за зростанням"
 dt_status_aria_sort_descending = ": активувати для сортування стовпців за спаданням"
+dt_status_decimal = ","
+dt_status_thousands = " "
 
 
 ; ---------------------- ;
@@ -324,6 +326,8 @@ dt_alerts_paginate_next = "Далі"
 dt_alerts_paginate_last = "Останній"
 dt_alerts_aria_sort_ascending = ": активувати для сортування стовпців за зростанням"
 dt_alerts_aria_sort_descending = ": активувати для сортування стовпців за спаданням"
+dt_alerts_decimal = ","
+dt_alerts_thousands = " "
 
 
 ; --------------------- ;
@@ -377,6 +381,8 @@ dt_cc_users_paginate_next = "Далі"
 dt_cc_users_paginate_last = "Останній"
 dt_cc_users_aria_sort_ascending = ": активувати для сортування стовпців за зростанням"
 dt_cc_users_aria_sort_descending = ": активувати для сортування стовпців за спаданням"
+dt_cc_users_decimal = ","
+dt_cc_users_thousands = " "
 
 
 ; -------------------- ;
@@ -510,6 +516,8 @@ dt_cc_reports_paginate_next = "Далі"
 dt_cc_reports_paginate_last = "Останній"
 dt_cc_reports_aria_sort_ascending = ": активувати для сортування стовпців за зростанням"
 dt_cc_reports_aria_sort_descending = ": активувати для сортування стовпців за спаданням"
+dt_cc_reports_decimal = ","
+dt_cc_reports_thousands = " "
 
 
 ; --------------------- ;
